welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: '(' expected but identifier found.
        if b(<13) {
           ^loneTeen:8: error: illegal start of simple expression
      }
      ^